--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,29 @@
 		<version>5.4.2</version>
 		<scope>test</scope>
 	</dependency>
+	<dependency>
+		<groupId>org.hamcrest</groupId>
+		<artifactId>hamcrest-library</artifactId>
+		<version>2.1</version>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-api</artifactId>
+		<version>1.6.2</version>
+	</dependency>
+	<dependency>
+		<groupId>org.mockito</groupId>
+		<artifactId>mockito-junit-jupiter</artifactId>
+		<version>2.27.0</version>
+		<scope>test</scope>
+	</dependency>
+	<dependency>
+		<groupId>org.seleniumhq.selenium</groupId>
+		<artifactId>selenium-java</artifactId>
+		<version>3.12.0</version>
+		<scope>test</scope>
+	</dependency>
 </dependencies>
 
 <build>
@@ -37,6 +60,11 @@
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-surefire-plugin</artifactId>
 			<version>2.19.1</version>
+			<configuration>
+			<properties>
+				<includeTags>${testtag}</includeTags>
+			</properties>
+			</configuration>
 			<dependencies>
 				<dependency>
 					<groupId>org.junit.platform</groupId>
@@ -50,6 +78,48 @@
 				</dependency>
 			</dependencies>
 		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-site-plugin</artifactId>
+			<version>3.7.1</version>
+		</plugin>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-project-info-reports-plugin</artifactId>
+			<version>3.0.0</version>
+		</plugin>
 	</plugins>
 </build>
+
+<profiles>
+	<profile>
+		<id>development</id>
+		<properties>
+			<testtag>development</testtag>
+		</properties>
+	</profile>
+	<profile>
+		<id>production</id>
+		<properties>
+			<testtag>production</testtag>
+		</properties>
+	</profile>
+</profiles>
+
+<reporting>
+	<plugins>
+		<plugin>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>cobertura-maven-plugin</artifactId>
+			<version>2.7</version>
+			<configuration>
+				<formats>
+					<format>xml</format>
+					<format>html</format>
+				</formats>
+			</configuration>
+		</plugin>
+	</plugins>
+</reporting>
+
 </project>
